[package]
edition      = "2024"
name         = "wetterstation"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "wetterstation"
path = "src/main.rs"

[dependencies]
embassy-executor = { version = "0.9.1" }
embassy-net = { version = "0.8.0", features = ["dhcpv4", "tcp"] }
embassy-time = "0.5.0"
embassy-sync = { version = "0.7.2", features = ["defmt"] }
esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable"] }
esp-radio = { version = "0.17.0", features = ["defmt", "esp32c6", "wifi"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp-radio", "esp32c6"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c6"] }
esp-alloc = { version = "0.9.0", features = ["esp32c6"] }
rust-mqtt = { version = "0.4.1", default-features = false, features = ["alloc", "v5"] }
static_cell = "2.1.1"
heapless = "0.8.0"
smoltcp = {  version = "0.12.0", default-features = false }
defmt = "1.0.1"
defmt-rtt = "1.1.0"

[profile.dev.package.esp-radio]
opt-level = 3

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
